working of shop section

--- a/src/index.html
+++ b/src/index.html
@@ -53,11 +53,45 @@
             </article>
         </section>
         <!--section de tienda-->
-        <section>
+        <section class="catalogo">
             <ul>
                 <li>Categories</li>
                 <li>Filter</li>
             </ul>
+            <div class="row">
+                <article class="wine-bottle col-xs-12 col-sm-6 col-lg-4">
+                    <div class="img-center">
+                        <img class="bottle-img" src="../public/img/wine-bottles/1i1MlXXaS7qHjS84jPKX3Q_pb_x600.png" alt="wine bottle">
+                    </div>
+                    <h3>LA CHABLISIENNE</h3>
+                    <h4>CHABLIS 1ER CRU FOURCHAUME</h4>
+                    <ul>
+                        <li class="wine-type">White</li>
+                        <li class="wine-style">Bourgogne Chablis</li>
+                        <li class="grape-type">Chardonnay</li>
+                        <li class="wine-country">Bourgogne, France</li>
+                    </ul>
+                    <div class="buy">
+                        <button type="button" class="btn btn-primary">19,90€</button>
+                    </div>
+                </article>
+                <article class="wine-bottle col-xs-12 col-sm-6 col-lg-4">
+                    <div class="img-center">
+                        <img class="bottle-img" src="../public/img/wine-bottles/4fVjSKYtQcSx_mOBWZtDOg_pb_x600.png" alt="wine bottle">
+                    </div>
+                    <h3>ALBERT BICHOT</h3>
+                    <h4>CHABLIS</h4>
+                    <ul>
+                        <li class="wine-type">White</li>
+                        <li class="wine-style">Bourgogne Chablis</li>
+                        <li class="grape-type">Chardonnay</li>
+                        <li class="wine-country">Bourgogne, France</li>
+                    </ul>
+                    <div class="buy">
+                        <button type="button" class="btn btn-primary">19,90€</button>
+                    </div>
+                </article>
+            </div>
         </section>
         <footer>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
