--- a/src/index.html
+++ b/src/index.html
@@ -1,103 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Winery</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-lg bg-traslucent">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../public/img/Logo.png" alt="Logo" height="60"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="bi bi-list red-icon"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                </ul>
-            </div>
+    <header class="navbar">
+        <div class="navbar-flex">
+            <a href="#"><img id="logo" src="../public/img/Logo.png" alt="Logo"></a>
+            <a href="#"><img id="menu-icon" src="../public/icons/MaterialSymbolsMenu.svg"></a>
         </div>
-    </nav>
-    <main class="container">
-        
-        <!--Section de landing-->
-        <section>
-            <article>
-                <h1>A good wine makes special any ocassion</h1>
-            </article>
-        </section>
-        <!-- Section de featured wine-->
-        <section>
-            <article>
-                <h1>OUR BEST SELLER</h1>
-                <h2>CHATEAU DE MALIGNY CHABLIS PREMIER CRU 'FOURCHAUME' 2018</h2>
-            </article>
-        </section>
-        <!--section de tienda-->
-        <section class="catalogo">
-            <ul class="catalogo-menu d-flex">
-                <li><span>Categories</span></li>
-                <li><span>Filter</span></li>
+        <nav id="menu" class="hide">
+            <ul>
+                <a href="#"><li>Nacionales</li></a>
+                <a href="#"><li>Importados</li></a>
+                <a href="#"><li>Exclusivos</li></a>
+                <a href="#"><li>Añejos</li></a>
             </ul>
-            <div class="row">
-                <article class="wine-bottle col-xs-12 col-sm-6 col-lg-4">
-                    <div class="img-center">
-                        <img class="bottle-img" src="../public/img/wine-bottles/1i1MlXXaS7qHjS84jPKX3Q_pb_x600.png" alt="wine bottle">
-                    </div>
-                    <h3>LA CHABLISIENNE</h3>
-                    <h4>CHABLIS 1ER CRU FOURCHAUME</h4>
-                    <ul>
-                        <li class="wine-type">White</li>
-                        <li class="wine-style">Bourgogne Chablis</li>
-                        <li class="grape-type">Chardonnay</li>
-                        <li class="wine-country">Bourgogne, France</li>
-                    </ul>
-                    <div class="buy">
-                        <button type="button" class="btn btn-primary">19,90€</button>
-                    </div>
-                </article>
-                <article class="wine-bottle col-xs-12 col-sm-6 col-lg-4">
-                    <div class="img-center">
-                        <img class="bottle-img" src="../public/img/wine-bottles/4fVjSKYtQcSx_mOBWZtDOg_pb_x600.png" alt="wine bottle">
-                    </div>
-                    <h3>ALBERT BICHOT</h3>
-                    <h4>CHABLIS</h4>
-                    <ul>
-                        <li class="wine-type">White</li>
-                        <li class="wine-style">Bourgogne Chablis</li>
-                        <li class="grape-type">Chardonnay</li>
-                        <li class="wine-country">Bourgogne, France</li>
-                    </ul>
-                    <div class="buy">
-                        <button type="button" class="btn btn-primary">19,90€</button>
-                    </div>
-                </article>
+        </nav>
+    </header>
+    <main class="container">
+        <section class="landing">
+            <div class="text-box">
+                <h1>"A good wine makes special any ocassion"</h1>
             </div>
         </section>
-        <footer>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </footer>
+        <section class="landing">
+            <div class="text-box">
+                <h1>"Life is too short to drink bad wine"</h1>
+            </div>
+        </section>
+        <section class="landing">
+            <div class="text-box">
+                <h1>"Wine is bottled poetry"</h1></section>
+            </div>
+        <section>Featured Wine</section>
+        <section>Shop</section>
     </main>
 
 
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
-    </script>
-</body>
 
+    <script src="./js/app.js"></script>
+</body>
 </html>
