Added bg images

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <main class="container">
-        <section class="landing">
+        <section class="landing" id="landing-1">
             <div class="text-box">
                 <h1>"A good wine makes special any ocassion"</h1>
             </div>
@@ -37,8 +37,31 @@
             <div class="text-box">
                 <h1>"Wine is bottled poetry"</h1></section>
             </div>
+
+
+
+
+
+            
         <section>Featured Wine</section>
-        <section>Shop</section>
+        <section id="shop">
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/1i1MlXXaS7qHjS84jPKX3Q_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>LA CHABLISIENNE</h1>
+                    <h2>CHABLIS 1ER CRU FOURCHAUME</h2>
+                    <ul>
+                        <li>White</li>
+                        <li>Bourgogne Chablis</li>
+                        <li>Chardonnay</li>
+                        <li>Bourgogne, France</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+        </section>
     </main>
 
 
