--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Wine Valley</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
     <header class="navbar">
         <div class="navbar-flex">
@@ -15,10 +17,18 @@
         </div>
         <nav id="menu" class="hide">
             <ul>
-                <a href="#"><li>Nacionales</li></a>
-                <a href="#"><li>Importados</li></a>
-                <a href="#"><li>Exclusivos</li></a>
-                <a href="#"><li>Añejos</li></a>
+                <a href="#">
+                    <li>Nacionales</li>
+                </a>
+                <a href="#">
+                    <li>Importados</li>
+                </a>
+                <a href="#">
+                    <li>Exclusivos</li>
+                </a>
+                <a href="#">
+                    <li>Añejos</li>
+                </a>
             </ul>
         </nav>
     </header>
@@ -35,15 +45,36 @@
         </section>
         <section class="landing">
             <div class="text-box">
-                <h1>"Wine is bottled poetry"</h1></section>
+                <h1>"Wine is bottled poetry"</h1>
+        </section>
+        </div>
+
+
+        <section id="featured">
+            <div class="title">
+                <h1>OUR BEST SELLER</h1>
+                <h2>CHATEAU DE MALIGNY CHABLIS PREMIER CRU 'FOURCHAUME' 2018</h2>
+                <p>The 2018 Jean Durup & Fils Chateau de Maligny Chablis Fourchaume Premier Cru is a round, supple wine
+                    with a good structure typical of Premier Crus. Its roundness and flexibility will allow you to enjoy
+                    it now. In the case of a Chablis Premier Cru, however, it will gain by aging a few years to express
+                    itself at its true value. </p>
             </div>
-
-
-
-
-
+            <div class="img-wrapper">
+                <img src="../public/img/wine-bottles/Rxg_HyC7Qf2KR7kN--iyRA_pb_x600.png" alt="" srcset="">
+            </div>
+            <div class="menu-wrapper">
+                <ul>
+                    <li>SEC</li>
+                    <li>ALB</li>
+                    <li>12.5%</li>
+                    <li>750ml</li>
+                    <li>Italy</li>
+                </ul>
+            </div>
             
-        <section>Featured Wine</section>
+
+        </section>
+
         <section id="shop">
             <div class="wine">
                 <div class="img-wrapper">
@@ -53,19 +84,199 @@
                     <h1>LA CHABLISIENNE</h1>
                     <h2>CHABLIS 1ER CRU FOURCHAUME</h2>
                     <ul>
-                        <li>White</li>
-                        <li>Bourgogne Chablis</li>
-                        <li>Chardonnay</li>
-                        <li>Bourgogne, France</li>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Bourgogne Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Chardonnay</li>
+                        <li><img src="../public/icons/flag.svg">Bourgogne</li>
                     </ul>
                     <a href="#" class="btn-buy">19,90€</a>
                 </div>
             </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/uf3a1F82SGuBiTtJAdRJhA_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>UMANI RONCHI</h1>
+                    <h2> Cùmaro Conero Riserva</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Tintilia</li>
+                        <li><img src="../public/icons/flag.svg">Italy / Molise</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/4fVjSKYtQcSx_mOBWZtDOg_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Albert Bichot</h1>
+                    <h2>Chablis</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Burgundy Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Tintilia</li>
+                        <li><img src="../public/icons/flag.svg">Bourgogne</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/nBupGePBQt-PepuMfRdW-g_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Tombacco</h1>
+                    <h2>Biferno Rosso Riserva</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                        <li><img src="../public/icons/flag.svg">Biferno</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/pUJHLZWdSOWU2dUOyzpRKw_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Fiore Podere San Biagio</h1>
+                    <h2>Cafone Colli Aprutini Rosso</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                        <li><img src="../public/icons/flag.svg">Colli Aprutini</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/Rdcvxwk_THm1IVkQp57DUA_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Samuel Billaud</h1>
+                    <h2>Chablis (Les Grands Terroirs)</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Burgundy Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Chardonnay</li>
+                        <li><img src="../public/icons/flag.svg">Colli Aprutini</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/1i1MlXXaS7qHjS84jPKX3Q_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>LA CHABLISIENNE</h1>
+                    <h2>CHABLIS 1ER CRU FOURCHAUME</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Bourgogne Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Chardonnay</li>
+                        <li><img src="../public/icons/flag.svg">Bourgogne</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/uf3a1F82SGuBiTtJAdRJhA_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>UMANI RONCHI</h1>
+                    <h2> Cùmaro Conero Riserva</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Tintilia</li>
+                        <li><img src="../public/icons/flag.svg">Italy / Molise</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/4fVjSKYtQcSx_mOBWZtDOg_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Albert Bichot</h1>
+                    <h2>Chablis</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Burgundy Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Tintilia</li>
+                        <li><img src="../public/icons/flag.svg">Bourgogne</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/nBupGePBQt-PepuMfRdW-g_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Tombacco</h1>
+                    <h2>Biferno Rosso Riserva</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                        <li><img src="../public/icons/flag.svg">Biferno</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/pUJHLZWdSOWU2dUOyzpRKw_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Fiore Podere San Biagio</h1>
+                    <h2>Cafone Colli Aprutini Rosso</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                        <li><img src="../public/icons/flag.svg">Colli Aprutini</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/Rdcvxwk_THm1IVkQp57DUA_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Samuel Billaud</h1>
+                    <h2>Chablis (Les Grands Terroirs)</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Burgundy Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Chardonnay</li>
+                        <li><img src="../public/icons/flag.svg">Colli Aprutini</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+
+
         </section>
     </main>
 
 
 
     <script src="./js/app.js"></script>
+    <script src="./js/ui.js"></script>
 </body>
+
 </html>
