resolved conflits at bad merge

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,16 @@
             <div class="text-box">
                 <h1>"Wine is bottled poetry"</h1></section>
             </div>
+        </section>
+        <section id="featured">
+            <div class="title">
+                <h1>OUR BEST SELLER</h1>
+                <h2>CHATEAU DE MALIGNY CHABLIS PREMIER CRU 'FOURCHAUME' 2018</h2>
+                <p>The 2018 Jean Durup & Fils Chateau de Maligny Chablis Fourchaume Premier Cru is a round, supple wine
+                    with a good structure typical of Premier Crus. Its roundness and flexibility will allow you to enjoy
+                    it now. In the case of a Chablis Premier Cru, however, it will gain by aging a few years to express
+                    itself at its true value. </p>
+            </div>
             <div class="img-wrapper">
                 <img src="../public/img/wine-bottles/Rxg_HyC7Qf2KR7kN--iyRA_pb_x600.png" alt="" srcset="">
             </div>
